--- a/catkin_ws/src/localization/robot_localization/params/ekf_walker.yaml
+++ b/catkin_ws/src/localization/robot_localization/params/ekf_walker.yaml
@@ -138,12 +138,12 @@ odom0_relative: true
 
 imu0: imu
 imu0_config: [false, false, false,
+              false, false, false,
+              false, false, false,
               false, false, true,
-              false, false, false,
-              false, false, false,
               true, true, false]
 imu0_nodelay: false
-imu0_differential: true
+imu0_differential: false
 imu0_relative: true
 imu0_queue_size: 5
 # imu0_pose_rejection_threshold: 0.8                 # Note the difference in parameter names
