--- a/catkin_ws/src/localization/robot_localization/params/ekf_walker.yaml
+++ b/catkin_ws/src/localization/robot_localization/params/ekf_walker.yaml
@@ -138,7 +138,7 @@ odom0_relative: true
 
 imu0: imu
 imu0_config: [false, false, false,
-              false, false, true,
+              false, false, false,
               false, false, false,
               false, false, true,
               true, true, false]
